[package]
name = "policer"
version = "0.3.0"
edition = "2021"
authors = ["Hannes Hochreiner <hannes@hochreiner.net>"]
publish = false
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.75"
chrono = "0.4"
clap = { version = "4.3.23", features = ["derive"] }
serde = { version = "1.0.185", features = ["derive"] }
serde_json = "1.0.105"
